--- a/Planted.css
+++ b/Planted.css
@@ -3,8 +3,17 @@ body, html {
 }
 
 .nav-wrapper {
+   max-width: 100%;
    background-color: #00bfbf;
-   margin-bottom: 2px;
+   padding: 5px;
+   border-bottom: solid 2px white;
+}
+
+img {
+   height: 10%;
+   width: 50%;
+   margin-right: 200px;
+   margin-bottom: 30px;
 }
 
 .head {
@@ -23,14 +32,27 @@ body, html {
    font-size: 14px;
 }
 
-.row {
+.menu {
+   align-content: center;
+   padding: 2px;
+   margin-left: 2px;
+   margin-top: 1px;
+   font-size: 14px;
+}
+
+.jumbotron {
    justify-content: center;
    background-color: #00bfbf;
    color: white;
    padding: 155px;
-   margin-bottom: 2px;
    text-align: center;
    font-size: 20px;
+}
+
+.flamingo {
+   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   font-size: 20px;
+   align-content: center;
 }
 
 #emailbox {
